<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.github.nkpaliath.shoestore.screens.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <action
            android:id="@+id/action_loginFragment_to_listingFragment"
            app:destination="@id/listingFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.github.nkpaliath.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/text_welcome_heading"
        tools:layout="@layout/fragment_welcome">
        <argument
            android:name="isNewUser"
            app:argType="boolean" />
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.github.nkpaliath.shoestore.screens.instruction.InstructionFragment"
        android:label="@string/text_instructions_heading"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instructionFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/listingFragment"
        android:name="com.github.nkpaliath.shoestore.screens.listing.ListingFragment"
        android:label="@string/text_shoes_inventory"
        tools:layout="@layout/fragment_listing" >
        <action
            android:id="@+id/action_listingFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_listingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.github.nkpaliath.shoestore.screens.detail.DetailFragment"
        android:label="@string/text_shoe_details_heading"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_detailFragment_to_listingFragment"
            app:destination="@id/listingFragment" />
    </fragment>
</navigation>