<?xml version="1.0" encoding="utf-8"?>
<!--This layout uses ConstraintLayout as it requires a FAB button to be placed
at the bottom end of the screen regardless of other items being present or not.
It uses a ScrollView to display of list of items where each item is placed within
a vertical LinearLayout.-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listingScreen"
            type="com.github.nkpaliath.shoestore.screens.listing.ListingFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/list_of_shoes_available"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="@dimen/layout_small"
            android:paddingHorizontal="@dimen/layout_small"
            android:paddingBottom="@dimen/layout_very_small">

            <LinearLayout
                android:id="@+id/listShoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textNoShoesInList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AllText"
            android:text="@string/text_no_shoes_in_list"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintVertical_bias=".95"
            android:contentDescription="@string/fab_add_shoe"
            android:backgroundTint="?attr/colorTertiaryContainer"
            android:src="@drawable/ic_add"
            android:onClickListener="@{() -> listingScreen.onClickAddShoe()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
